@@ -2,6 +2,7 @@
 - rename vips wrapper script, it was still vips-8.2, thanks Benjamin
 - export C++ operator overloads for MSVC linking [Lovell]
 - insist on giflib4
+- fix magickload @page with GraphicsMagick
 
 29/1/16 started 8.3
 - add vips_reduce*() ... a fast path for affine downsize
